--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -30,11 +30,6 @@ spec:
       containers:
         - name: statslogger
           image: us.gcr.io/com-seankhliao/statslogger:latest
-          args:
-            - -tls.crt=/var/secret/tls/tls.crt
-            - -tls.key=/var/secret/tls/tls.key
-            - -ca.crt=/var/secret/tls/ca.crt
-            - -saver=saver.default.svc.cluster.local:443
           ports:
             - name: https
               containerPort: 8080
@@ -42,11 +37,11 @@ spec:
               containerPort: 8000
           livenessProbe:
             httpGet:
-              path: /health
+              path: /liveness
               port: 8000
           readinessProbe:
             httpGet:
-              path: /health
+              path: /readiness
               port: 8000
           volumeMounts:
             - name: certs
