--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,7 @@ tags:
 
 steps:
   - id: login
-    name: gcr.io/cloud-builders/gcloud
+    name: gcr.io/google.com/cloudsdktool/cloud-sdk:latest
     entrypoint: bash
     args:
       - -c
@@ -23,12 +23,12 @@ steps:
           --secret=cluster-kubectl-creds \
           --format='get(payload.data)' \
           | tr '_-' '/+' \
-          | base64 -d > /root/.kube/config
+          | base64 -d > /kube/config
     volumes:
       - name: registry-creds
         path: /kaniko/.docker
       - name: cluster-creds
-        path: /root/.kube
+        path: /kube
 
   - id: build-push
     name: gcr.io/kaniko-project/executor:latest
@@ -44,15 +44,16 @@ steps:
         path: /kaniko/.docker
 
   - id: deploy
-    name: gcr.io/cloud-builders/kubectl:latest
+    name: gcr.io/google.com/cloudsdktool/cloud-sdk:latest
     entrypoint: /bin/sh
     args:
       - -c
       - |
         set -ex; \
-        echo $PWD $HOME && echo $$(whoami) && \
         sed -i 's/# newTag: IMAGE_TAG/newTag: "$SHORT_SHA"/' k8s/kustomization.yaml && \
         kubectl apply -k k8s
+    env:
+      - KUBECONFIG=/kube/config
     volumes:
       - name: cluster-creds
-        path: /root/.kube
+        path: /kube
