--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,8 +7,17 @@ tags:
   - $COMMIT_SHA
 
 steps:
+  - id: test
+    name: golang:alpine
+    entrypoint: go
+    args:
+      - test
+      - ./...
+
   - id: login
-    name: gcr.io/cloud-builders/kubectl:latest
+    waitFor:
+      - "-"
+    name: gcr.io/cloud-builders/gcloud:latest
     entrypoint: bash
     args:
       - -c
@@ -24,13 +33,23 @@ steps:
           --format='get(payload.data)' \
           | tr '_-' '/+' \
           | base64 -d > /kube/config
+        && \
+        gcloud secrets versions access latest \
+          --secret=github-personal-repo-token \
+          --format='get(payload.data)' \
+          | tr '_-' '/+' \
+          | base64 -d > /github/token
     volumes:
       - name: registry-creds
         path: /kaniko/.docker
       - name: cluster-creds
         path: /kube
+      - name: github-creds
+        path: /github
 
   - id: build-push
+    waitFor:
+      - "login"
     name: gcr.io/kaniko-project/executor:latest
     args:
       - -c=.
@@ -51,9 +70,32 @@ steps:
       - |
         set -ex; \
         sed -i 's/# newTag: IMAGE_TAG/newTag: "$SHORT_SHA"/' k8s/kustomization.yaml && \
-        kubectl.1.18 apply -k k8s
+        kubectl.1.18 kustomize | tee /k8s/$_IMG.yaml | kubectl.1.18 apply -f -
     env:
       - KUBECONFIG=/kube/config
     volumes:
       - name: cluster-creds
         path: /kube
+      - name: deployed
+        path: /k8s
+
+  - id: save-deployment
+    name: gcr.io/cloud-builders/gcloud:latest
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        set -ex; \
+        export GITHUB_TOKEN=$$(cat /github/token)
+        git config user.email $(gcloud auth list --filter=status:ACTIVE --format='value(account)') && \
+        git clone https://x-access-token:$$GITHUB_TOKEN@github.com/seankhliao/kluster && \
+        cd kluster/apps && \
+        cp /k8s/$_IMG.yaml . && \
+        git add $_IMG.yaml && \
+        git commit -m "update $_IMG deployment to $SHORT_SHA" && \
+        git push
+    volumes:
+      - name: github-creds
+        path: /github
+      - name: deployed
+        path: /k8s
